Publisher generated commit [ci skip]

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <div class="container">
-  <h1 id="kev_nzdelayed-job"><a href="https://github.com/kev">@kev</a>_nz/delayed-job</h1>
+  <h1 id="delayed-job">delayed-job</h1>
 <p>delayed-job is a horizontally scalable Node.js implementation of Ruby's delayed_job. Using semaphore locks it aims to provide an atomic interface to a federation of workers operating on the same job queue. Initial work has focussed on a Redis backed database, however more backend implementations are possible.</p>
 <p><img src="https://kevinisom.info/delayed-job/delayed-job.png" alt="delayed-job" /></p>
 <h2 id="installation">Installation</h2>
