--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="@kev_nz/delayed-job - Redis backed Node.js implementation of delayed job - Kevin Isom" />
   <meta property="og:url" content="https://kevinisom.info/delayed-job" />
-  <meta property="og:image" content="https://avatars3.githubusercontent.com/u/62547?s=400&amp;v=4" />
+  <meta property="og:image" content="https://kevinisom.info/delayed-job/kev-nz-delayed-job-kevin-isom-screenshot.png" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@kev_nz" />
   <meta name="twitter:title" content="@kev_nz/delayed-job - Redis backed Node.js implementation of delayed job - Kevin Isom" />
   <meta name="twitter:description" content="Redis backed Node.js implementation of delayed job" />
-  <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/62547?s=400&amp;v=4" />
+  <meta name="twitter:image"
+    content="https://kevinisom.info/delayed-job/kev-nz-delayed-job-kevin-isom-screenshot.png" />
 
 </head>
 
