Assets and readme update

--- a/.assets/head.html
+++ b/.assets/head.html
@@ -15,13 +15,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="{name} - {description} - Kevin Isom" />
   <meta property="og:url" content="https://kevinisom.info/delayed-job" />
-  <meta property="og:image" content="https://avatars3.githubusercontent.com/u/62547?s=400&amp;v=4" />
+  <meta property="og:image" content="https://kevinisom.info/delayed-job/kev-nz-delayed-job-kevin-isom-screenshot.png" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@kev_nz" />
   <meta name="twitter:title" content="{name} - {description} - Kevin Isom" />
   <meta name="twitter:description" content="{description}" />
-  <meta name="twitter:image" content="https://avatars3.githubusercontent.com/u/62547?s=400&amp;v=4" />
+  <meta name="twitter:image"
+    content="https://kevinisom.info/delayed-job/kev-nz-delayed-job-kevin-isom-screenshot.png" />
 
 </head>
 
